<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.hm.notificationdemo.MainActivity">

        <Button
            android:id="@+id/btn_send_primary_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="click"
            android:text="@string/send_notification"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_send_secondary_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="click"
            android:text="@string/send_secondary_notification"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_launch_first_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="click"
            android:text="@string/launch_first_activity"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_launch_second_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="click"
            android:text="@string/launch_second_activity"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_open_notification_channel_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="click"
            android:text="@string/open_notification_channel_setting"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_open_notification_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="click"
            android:text="@string/open_notification_setting"
            android:textAllCaps="false" />

    </LinearLayout>

</layout>

